services/nextcloud/templates/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud-ingress
spec:
  tls:
    - hosts:
        - nextcloud.simonmalm.com
      secretName: nextcloud-simonmalm-com
  rules:
    - host: nextcloud.simonmalm.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nextcloud
                port:
                  number: 8080
